--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,61 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Diagnostic reports (https://nodejs.org/api/report.html)
+.report/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Node.js
+# Lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Dependency directories
+node_modules/
+/jspm_packages/
+
+# TypeScript v1 declaration files
+typings/
+
+# Optional npm cache directory
+.npm/
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Optional Prettier cache
+.prettiercache
+
+# Compiled production files
+/dist
+/build
+/.vite
+/coverage
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Runtime files
+*.pid
+*.seed
+*.info
+
+# IDEs and Editors
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+Desktop.ini
